--- a/index_en.html
+++ b/index_en.html
@@ -76,7 +76,7 @@
           <span class="text-md-right">Tung</span>
         </h2>
         <div class="subheading mb-1">
-          ĐIỆN THOẠI:
+          Phone number:
           <!-- <a href="">037.667.4647</a> -->
           <a href="">***.***.****</a>
         </div>
@@ -329,7 +329,7 @@
   <ul class="fa-ul mb-0">
     <li>
       <i class="fa-li fa fa-check"></i>
-      <strong>Tiếng anh:</strong> &emsp; English skills (Intermediate):
+      <strong>English:</strong> &emsp; English skills (Intermediate):
       listening speaking reading writing
     </li>
     <li>
@@ -350,7 +350,7 @@
     <!-- Start: Projects -->
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="projects">
       <div class="w-100">
-        <h3 class="mb-3">Dự án đã làm</h3>
+        <h3 class="mb-3">PROJECTS</h3>
         <div style="padding-left: 20px">
           <hr class="mb-2 mt-0" />
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
@@ -579,7 +579,7 @@
     <!-- Start: Experience -->
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h3 class="mb-3">Kinh nghiệm</h3>
+        <h3 class="mb-3">Experience</h3>
         <div style="padding-left: 20px; margin-bottom: 40px">
           <!-- <hr class="mb-2" />
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
@@ -639,7 +639,7 @@
                       font-style: italic;
                     " href="https://fhq.hcmute.edu.vn/">info</a>
               </h4>
-              <div class="h5 mb-2">VPosition: Teaching Assistant</div>
+              <div class="h5 mb-2">Position: Teaching Assistant</div>
               <!-- <div class="h5 mb-2">Hướng dẫn: Phan Viết Thế (Trưởng phòng đào tạo)</div>             -->
               <p style="margin-bottom: 4px">
                 Teaching Assistant for the Faculty of High-Quality Education (HCMc UTE) subject: 
