--- a/index_en.html
+++ b/index_en.html
@@ -7,7 +7,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>TÙNG NGUYỄN</title>
+  <title>TUNG NGUYEN</title>
 
   <!-- Icon -->
   <link href="img/avatar-square2.jpg" rel="icon" />
