--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <div style="margin-top: 30px; display: inline-block;">
           <a target="_blank" style="background: none"
-            href="https://drive.google.com/file/d/1IR2sfT-8h1bdhSiaXZ5mZ2lyBkk2reSP/view?usp=sharing">
+            href="hhttps://drive.google.com/file/d/1YD2TE-h5aKVaBbZcJ0o6Bbkcra7sZWus/view?usp=sharing">
             <button style="
                   background: rgb(255, 186, 146);
                   width: 150px;
@@ -123,7 +123,7 @@
         </div>
         <div style="margin-top: 30px; display: inline-block;margin-left: 15px;">
           <a target="_blank" style="background: none"
-            href="https://drive.google.com/file/d/1Hog4n2riK7P4zxE5b7l9XepC2VPMWaNf/view?usp=sharing">
+            href="https://drive.google.com/file/d/1YD2TE-h5aKVaBbZcJ0o6Bbkcra7sZWus/view?usp=sharing">
             <button style="
                   background: rgb(255, 186, 146);
                   width: 150px;
