--- a/index_en.html
+++ b/index_en.html
@@ -75,6 +75,7 @@
           NGUYEN QUANG
           <span class="text-md-right">Tung</span>
         </h2>
+        <h3>AI/ML Engineering</h3>
         <div class="subheading mb-1">
           Phone number:
           <!-- <a href="">037.667.4647</a> -->
