--- a/index_en.html
+++ b/index_en.html
@@ -110,7 +110,7 @@
         
         <div style="margin-top: 30px; display: inline-block;">
           <a target="_blank" style="background: none"
-            href="https://drive.google.com/file/d/1IR2sfT-8h1bdhSiaXZ5mZ2lyBkk2reSP/view?usp=sharing">
+            href="https://drive.google.com/file/d/1YD2TE-h5aKVaBbZcJ0o6Bbkcra7sZWus/view?usp=sharing">
             <button style="
                   background: rgb(255, 186, 146);
                   width: 150px;
@@ -326,7 +326,7 @@
     </li>
   </ul>
 
-  <div style="color: black" class="subheading mb-2 mt-3">Khác</div>
+  <div style="color: black" class="subheading mb-2 mt-3">Others</div>
   <ul class="fa-ul mb-0">
     <li>
       <i class="fa-li fa fa-check"></i>
@@ -339,7 +339,7 @@
     </li>
     <li>
       <i class="fa-li fa fa-check"></i>
-      <strong>Others :</strong>&emsp; Ability to work in groups, Ability to find
+      <strong>Soft skill :</strong>&emsp; Ability to work in groups, Ability to find
       curiosity, the ability to manage time, ...
     </li>
   </ul>
