--- a/index_en.html
+++ b/index_en.html
@@ -749,6 +749,9 @@
                 <li>
                   <a target="_blank" href="https://drive.google.com/file/d/1EPAkpCCNWCe14IserW7-uRTDiOZIPY5m/view?usp=sharing">Google Cloud: Fundamentas Core infracstructure.</a>
                 </li>
+                <li>
+                  <a target="_blank" href="https://drive.google.com/file/d/1zjiT1vctpta1w0QFWT_MZphgPBmSs73h/view?usp=sharing">HCMc UTE: Teaching Assistant Skill.</a>
+                </li>
                 <!-- <li>
                   <a target="_blank" href="https://www.hackerrank.com/certificates/59d095e60799">SQL</a>
                 </li>
