--- a/index.html
+++ b/index.html
@@ -774,6 +774,9 @@ e logo" title="Python" height="25" /></span>
                   <a target="_blank" href="https://drive.google.com/file/d/1EPAkpCCNWCe14IserW7-uRTDiOZIPY5m/view?usp=sharing">Google Cloud: Fundamentas Core infracstructure.</a>
                 </li>
                 <li>
+                  <a target="_blank" href="https://verified.sertifier.com/en/verify/32138525036931/?ref=email">Axon Active: Software development with Agile Scrum.</a>
+                </li>
+                <li>
                   <a target="_blank" href="https://drive.google.com/file/d/1zjiT1vctpta1w0QFWT_MZphgPBmSs73h/view?usp=sharing">HCMc UTE: Teaching Assistant Skill.</a>
                 </li>
                 <!-- <li>
