--- a/index_en.html
+++ b/index_en.html
@@ -750,6 +750,9 @@
                   <a target="_blank" href="https://drive.google.com/file/d/1EPAkpCCNWCe14IserW7-uRTDiOZIPY5m/view?usp=sharing">Google Cloud: Fundamentas Core infracstructure.</a>
                 </li>
                 <li>
+                  <a target="_blank" href="https://verified.sertifier.com/en/verify/32138525036931/?ref=email">Axon Active: Software development with Agile Scrum.</a>
+                </li>
+                <li>
                   <a target="_blank" href="https://drive.google.com/file/d/1zjiT1vctpta1w0QFWT_MZphgPBmSs73h/view?usp=sharing">HCMc UTE: Teaching Assistant Skill.</a>
                 </li>
                 <!-- <li>
