--- a/index.html
+++ b/index.html
@@ -632,6 +632,29 @@ e logo" title="Python" height="25" /></span>
               <span class="text-primary">04/2022 - nay</span>
             </div>
           </div> -->
+                    <hr class="mb-2" />
+          <div class="resume-item d-flex flex-column flex-md-row mb-2">
+            <div class="resume-content mr-auto">
+              <h4 class="mb-0">
+                Công ty TNHH Giải pháp Phần mềm Tường Minh (TMA Solutions) &nbsp;&nbsp;
+                <a target="_blank" style="
+                      font-size: 13px;
+                      font-weight: 100;
+                      font-style: italic;
+                    " href="https://www.tmasolutions.com/">info</a>
+              </h4>
+              <div class="h5 mb-2">Vị trí: Thực tập</div>
+              <!-- <div class="h5 mb-2">Hướng dẫn: Đào Ngọc Giang (Trưởng phòng phát triển)</div>             -->
+              <p style="margin-bottom: 4px">
+                Thực tập sinh thị giác máy tính tại phòng "Đổi mới trí tuệ nhân tạo". Nhận việc nghiên cứu về SOTA model: YOLO, Tại đây tôi được tham gia vào dự án thực tế, qua đó
+                nắm được kỹ năng làm việc, tìm kiếm thông tin chưa biết để
+                hoàn thành nhiệm vụ được giao.
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">03/2023 - 6/2023</span>
+            </div>
+          </div>
           <hr class="mb-2" />
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
