--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ e logo" title="Python" height="25" /></span>
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
               <h4 class="mb-0">
-                Công ty TNHH Giải pháp Phần mềm Tường Minh (TMA Solutions) &nbsp;&nbsp;
+                Công ty TNHH Tự Động Hóa SVN (Sophic Automation/ SVN Automation) &nbsp;&nbsp;
                 <a target="_blank" style="
                       font-size: 13px;
                       font-weight: 100;
@@ -646,13 +646,12 @@ e logo" title="Python" height="25" /></span>
               <div class="h5 mb-2">Vị trí: Thực tập</div>
               <!-- <div class="h5 mb-2">Hướng dẫn: Đào Ngọc Giang (Trưởng phòng phát triển)</div>             -->
               <p style="margin-bottom: 4px">
-                Thực tập sinh thị giác máy tính tại phòng "Đổi mới trí tuệ nhân tạo". Nhận việc nghiên cứu về SOTA model: YOLO, Tại đây tôi được tham gia vào dự án thực tế, qua đó
-                nắm được kỹ năng làm việc, tìm kiếm thông tin chưa biết để
-                hoàn thành nhiệm vụ được giao.
+                Thực tập sinh thị giác máy tính tại phòng Research and Development (R&D Department) . Nhận việc nghiên cứu về: AI Computer Vision, Embedded software, Software application.  Tại đây tôi được tham gia vào dự án thực tế, 
+                ứng dụng các kiến thức đã học để giải quyết một số vấn đề điều khiển cánh tay robot để thực hiện một tác vụ nào đó.
               </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">03/2023 - 6/2023</span>
+              <span class="text-primary">08/2023 - 12/2023</span>
             </div>
           </div>
           <hr class="mb-2" />
