--- a/index_en.html
+++ b/index_en.html
@@ -609,6 +609,29 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
               <h4 class="mb-0">
+                SVN Automation Company &nbsp;&nbsp;
+                <a target="_blank" style="
+                      font-size: 13px;
+                      font-weight: 100;
+                      font-style: italic;
+                    " href="https://www.tmasolutions.com/">info</a>
+              </h4>
+              <div class="h5 mb-2">Position: Intern</div>
+              <!-- <div class="h5 mb-2">Hướng dẫn: Đào Ngọc Giang (Trưởng phòng phát triển)</div>             -->
+              <p style="margin-bottom: 4px">
+                Computer vision intern in the "Research and Development" (R&D) Department. Get research jobs on: AI Computer Vision, Embedded Software, Software Applications. Here I was involved in a real project,
+                Apply learned knowledge to solve some problems of controlling robot arms to perform any task.
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">03/2023 - 6/2023</span>
+            </div>
+          </div>
+
+          <hr class="mb-2" />
+          <div class="resume-item d-flex flex-column flex-md-row mb-2">
+            <div class="resume-content mr-auto">
+              <h4 class="mb-0">
                 TMA Solutions Company &nbsp;&nbsp;
                 <a target="_blank" style="
                       font-size: 13px;
