--- a/index_en.html
+++ b/index_en.html
@@ -609,7 +609,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
               <h4 class="mb-0">
-                SVN Automation Company &nbsp;&nbsp;
+                SVN Automation Company (Sophic Automation Company)&nbsp;&nbsp;
                 <a target="_blank" style="
                       font-size: 13px;
                       font-weight: 100;
