--- a/index_en.html
+++ b/index_en.html
@@ -619,8 +619,8 @@
               <div class="h5 mb-2">Position: Intern</div>
               <!-- <div class="h5 mb-2">Hướng dẫn: Đào Ngọc Giang (Trưởng phòng phát triển)</div>             -->
               <p style="margin-bottom: 4px">
-                Computer vision intern in the "Research and Development" (R&D) Department. Get research jobs on: AI Computer Vision, Embedded Software, Software Applications. Here I was involved in a real project,
-                Apply learned knowledge to solve some problems of controlling robot arms to perform any task.
+                Computer vision intern in the "Research and Development" (R&D) Department. Get research jobs on AI Computer Vision, Embedded Software, and Software Applications. 
+                Here I was involved in a real project, Applying learned knowledge to solve some problems of controlling robot arms to perform any task.
               </p>
             </div>
             <div class="resume-date text-md-right">
@@ -642,9 +642,8 @@
               <div class="h5 mb-2">Position: Intern</div>
               <!-- <div class="h5 mb-2">Hướng dẫn: Đào Ngọc Giang (Trưởng phòng phát triển)</div>             -->
               <p style="margin-bottom: 4px">
-                Computer vision intern in the "Artificial Intelligence Innovation" room. Received the research on the SOTA model: YOLO, Here I was involved in the actual project, through which
-                 acquire working skills, search for unknown information to
-                 complete the mission given.
+                Computer vision intern in the "Artificial Intelligence Innovation" room. Received the research on the SOTA model: YOLO,
+                 Here I was involved in the actual project, through which acquired working skills, searched for unknown information to complete the mission given.
               </p>
             </div>
             <div class="resume-date text-md-right">
