--- a/index_en.html
+++ b/index_en.html
@@ -192,6 +192,8 @@
  &nbsp;
  <span><img src="https://img.shields.io/badge/googlecolab-282C34?logo=googlecolab&logoColor=#F9AB00" alt="googlecolab logo" title="googlecolab" height="25" /></span>
  &nbsp;
+ <span><img src="https://img.shields.io/badge/pycharm-282C34?logo=pycharm&logoColor=#000000" alt="pycharm logo" title="pycharm" height="25" /></span>
+&nbsp;
  <span><img src="https://img.shields.io/badge/jupyter-282C34?logo=jupyter&logoColor=##F37626" alt="jupyter logo" title="jupyter" height="25" /></span>
  &nbsp;
  <span><img src="https://img.shields.io/badge/git-282C34?logo=git&logoColor=F05032" alt="git logo" title="git" height="25" /></span>
