--- a/index_en.html
+++ b/index_en.html
@@ -777,6 +777,9 @@
                   <a target="_blank" href="https://verified.sertifier.com/en/verify/32138525036931/?ref=email">Axon Active: Software development with Agile Scrum.</a>
                 </li>
                 <li>
+                  <a target="_blank" href="https://www.hackerrank.com/certificates/09495e205c27">Hacker Rank: SQL (Basic) Certificate.</a>
+                </li>
+                <li>
                   <a target="_blank" href="https://drive.google.com/file/d/1zjiT1vctpta1w0QFWT_MZphgPBmSs73h/view?usp=sharing">HCMc UTE: Teaching Assistant Skill.</a>
                 </li>
                 <!-- <li>
