add certificate hacker rank

--- a/index_en.html
+++ b/index_en.html
@@ -780,6 +780,12 @@
                   <a target="_blank" href="https://www.hackerrank.com/certificates/09495e205c27">Hacker Rank: SQL (Basic) Certificate.</a>
                 </li>
                 <li>
+                  <a target="_blank" href="https://www.hackerrank.com/certificates/e86c5942eb70">Hacker Rank: SQL (Intermediate) Certificate.</a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://www.hackerrank.com/certificates/6a96d048f9dc">Hacker Rank: Python (Basic) Certificate.</a>
+                </li>
+                <li>
                   <a target="_blank" href="https://drive.google.com/file/d/1zjiT1vctpta1w0QFWT_MZphgPBmSs73h/view?usp=sharing">HCMc UTE: Teaching Assistant Skill.</a>
                 </li>
                 <!-- <li>
