--- a/index.html
+++ b/index.html
@@ -798,7 +798,16 @@ e logo" title="Python" height="25" /></span>
                   <a target="_blank" href="https://drive.google.com/file/d/1EPAkpCCNWCe14IserW7-uRTDiOZIPY5m/view?usp=sharing">Google Cloud: Fundamentas Core infracstructure.</a>
                 </li>
                 <li>
-                  <a target="_blank" href="https://verified.sertifier.com/en/verify/32138525036931/?ref=email">Axon Active: Software development with Agile Scrum.</a>
+                  <a target="_blank" href="https://verified.sertifier.com/en/verify/32138525036931/?ref=email">Axon Active - Software development with Agile Scrum.</a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://www.hackerrank.com/certificates/09495e205c27">Hacker Rank: SQL (Basic) Certificate.</a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://www.hackerrank.com/certificates/e86c5942eb70">Hacker Rank: SQL (Intermediate) Certificate.</a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://www.hackerrank.com/certificates/6a96d048f9dc">Hacker Rank: Python (Basic) Certificate.</a>
                 </li>
                 <li>
                   <a target="_blank" href="https://drive.google.com/file/d/1zjiT1vctpta1w0QFWT_MZphgPBmSs73h/view?usp=sharing">HCMc UTE: Teaching Assistant Skill.</a>
