add certificate hacker rank

--- a/index_en.html
+++ b/index_en.html
@@ -765,28 +765,28 @@
               <!-- <div>Skills Certification:</div> -->
               <ul>
                 <li>
-                  <a target="_blank" href="https://coursera.org/share/131e57c3091b9d447aa5ae48eebf273d">Machine Learning Specialization (Standford and DeepLearning.AI in Coursera).</a>
+                  <a target="_blank" href="https://coursera.org/share/131e57c3091b9d447aa5ae48eebf273d">Machine Learning Specialization - Standford and DeepLearning.AI (Coursera).</a>
                 </li>
                 <li>
-                  <a target="_blank" href="https://drive.google.com/file/d/1oqvtYnX-81nNHIIMRZUKllRUPUNqHT7E/view?usp=sharing">Google Cloud: Big Data and Machine Learning Fundamentals.</a>
+                  <a target="_blank" href="https://drive.google.com/file/d/1oqvtYnX-81nNHIIMRZUKllRUPUNqHT7E/view?usp=sharing">Big Data and Machine Learning Fundamentals - Google Cloud ACE.</a>
                 </li>
                 <li>
-                  <a target="_blank" href="https://drive.google.com/file/d/1EPAkpCCNWCe14IserW7-uRTDiOZIPY5m/view?usp=sharing">Google Cloud: Fundamentas Core infracstructure.</a>
+                  <a target="_blank" href="https://drive.google.com/file/d/1EPAkpCCNWCe14IserW7-uRTDiOZIPY5m/view?usp=sharing">Fundamentas Core infracstructure - Google Cloud ACE.</a>
                 </li>
                 <li>
-                  <a target="_blank" href="https://verified.sertifier.com/en/verify/32138525036931/?ref=email">Axon Active: Software development with Agile Scrum.</a>
+                  <a target="_blank" href="https://verified.sertifier.com/en/verify/32138525036931/?ref=email">Software development with Agile Scrum - Axon Active.</a>
                 </li>
                 <li>
-                  <a target="_blank" href="https://www.hackerrank.com/certificates/09495e205c27">Hacker Rank: SQL (Basic) Certificate.</a>
+                  <a target="_blank" href="https://www.hackerrank.com/certificates/09495e205c27">SQL (Basic) Certificate - Hacker Rank.</a>
                 </li>
                 <li>
-                  <a target="_blank" href="https://www.hackerrank.com/certificates/e86c5942eb70">Hacker Rank: SQL (Intermediate) Certificate.</a>
+                  <a target="_blank" href="https://www.hackerrank.com/certificates/e86c5942eb70">SQL (Intermediate) Certificate - Hacker Rank.</a>
                 </li>
                 <li>
-                  <a target="_blank" href="https://www.hackerrank.com/certificates/6a96d048f9dc">Hacker Rank: Python (Basic) Certificate.</a>
+                  <a target="_blank" href="https://www.hackerrank.com/certificates/6a96d048f9dc">Python (Basic) Certificate - Hacker Rank.</a>
                 </li>
                 <li>
-                  <a target="_blank" href="https://drive.google.com/file/d/1zjiT1vctpta1w0QFWT_MZphgPBmSs73h/view?usp=sharing">HCMc UTE: Teaching Assistant Skill.</a>
+                  <a target="_blank" href="https://drive.google.com/file/d/1zjiT1vctpta1w0QFWT_MZphgPBmSs73h/view?usp=sharing">Teaching Assistant Skill - HCMc UTE.</a>
                 </li>
                 <!-- <li>
                   <a target="_blank" href="https://www.hackerrank.com/certificates/59d095e60799">SQL</a>
