--- a/index.html
+++ b/index.html
@@ -792,6 +792,9 @@ e logo" title="Python" height="25" /></span>
                   <a target="_blank" href="https://coursera.org/share/131e57c3091b9d447aa5ae48eebf273d">Machine Learning Specialization - Standford and DeepLearning.AI (Coursera).</a>
                 </li>
                 <li>
+                  <a target="_blank" href="https://www.freecodecamp.org/certification/NguyenQuangTung/foundational-c-sharp-with-microsoft">Foundational C# with Microsoft - freeCodeCamp.</a>
+                </li>
+                <li>
                   <a target="_blank" href="https://drive.google.com/file/d/1oqvtYnX-81nNHIIMRZUKllRUPUNqHT7E/view?usp=sharing">Big Data and Machine Learning Fundamentals - Google Cloud ACE.</a>
                 </li>
                 <li>
