--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       </ul>
     </div>
     <div style="position: absolute; right: 100px">
-      <a href="index.html"><img src="img/vie.png" width="30px" height="20px" /></a>
-      <a href="index_en.html"><img src="img/en_uk.png" width="30px" height="20px" /></a>
+      <a href="index_vnm.html"><img src="img/vie.png" width="30px" height="20px" /></a>
+      <a href="index.html"><img src="img/en_uk.png" width="30px" height="20px" /></a>
     </div>
   </nav>
 
