--- a/index_vnm.html
+++ b/index_vnm.html
@@ -645,7 +645,7 @@ e logo" title="Python" height="25" /></span>
                       font-style: italic;
                     " href="https://www.tmasolutions.com/">info</a>
               </h4>
-              <div class="h5 mb-2">Vị trí: Thực tập</div>
+              <div class="h5 mb-2">Vị trí: Thực tập sinh</div>
               <!-- <div class="h5 mb-2">Hướng dẫn: Đào Ngọc Giang (Trưởng phòng phát triển)</div>             -->
               <p style="margin-bottom: 4px">
                 Thực tập sinh thị giác máy tính tại phòng Research and Development (R&D Department) . Nhận việc nghiên cứu về: AI Computer Vision, Embedded software, Software application.  Tại đây tôi được tham gia vào dự án thực tế, 
@@ -667,7 +667,7 @@ e logo" title="Python" height="25" /></span>
                       font-style: italic;
                     " href="https://www.tmasolutions.com/">info</a>
               </h4>
-              <div class="h5 mb-2">Vị trí: Thực tập</div>
+              <div class="h5 mb-2">Vị trí: Thực tập sinh</div>
               <!-- <div class="h5 mb-2">Hướng dẫn: Đào Ngọc Giang (Trưởng phòng phát triển)</div>             -->
               <p style="margin-bottom: 4px">
                 Thực tập sinh thị giác máy tính tại phòng "Đổi mới trí tuệ nhân tạo". Nhận việc nghiên cứu về SOTA model: YOLO, Tại đây tôi được tham gia vào dự án thực tế, qua đó
@@ -789,7 +789,7 @@ e logo" title="Python" height="25" /></span>
               <!-- <div>Skills Certification:</div> -->
               <ul>
                 <li>
-                  <a target="_blank" href="https://coursera.org/share/131e57c3091b9d447aa5ae48eebf273d">Machine Learning Specialization - Standford and DeepLearning.AI (Coursera).</a>
+                  <a target="_blank" href="https://coursera.org/share/f173e4381ce7ea8b319d2cabe44541e0">Machine Learning Specialization - Standford and DeepLearning.AI (Coursera).</a>
                 </li>
                 <li>
                   <a target="_blank" href="https://www.freecodecamp.org/certification/NguyenQuangTung/foundational-c-sharp-with-microsoft">Foundational C# with Microsoft - freeCodeCamp.</a>
