--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                       font-style: italic;
                     " href="https://www.tmasolutions.com/">info</a>
               </h4>
-              <div class="h5 mb-2">Position: Intern</div>
+              <div class="h5 mb-2">Position: AI Intern</div>
               <!-- <div class="h5 mb-2">Hướng dẫn: Đào Ngọc Giang (Trưởng phòng phát triển)</div>             -->
               <p style="margin-bottom: 4px">
                 Computer vision intern in the "Research and Development" (R&D) Department. Get research jobs on AI Computer Vision, Embedded Software, and Software Applications. 
@@ -641,7 +641,7 @@
                       font-style: italic;
                     " href="https://www.tmasolutions.com/">info</a>
               </h4>
-              <div class="h5 mb-2">Position: Intern</div>
+              <div class="h5 mb-2">Position: AI Intern</div>
               <!-- <div class="h5 mb-2">Hướng dẫn: Đào Ngọc Giang (Trưởng phòng phát triển)</div>             -->
               <p style="margin-bottom: 4px">
                 Computer vision intern in the "Artificial Intelligence Innovation" room. Received the research on the SOTA model: YOLO,
@@ -765,7 +765,7 @@
               <!-- <div>Skills Certification:</div> -->
               <ul>
                 <li>
-                  <a target="_blank" href="https://coursera.org/share/131e57c3091b9d447aa5ae48eebf273d">Machine Learning Specialization - Standford and DeepLearning.AI (Coursera).</a>
+                  <a target="_blank" href="https://coursera.org/share/f173e4381ce7ea8b319d2cabe44541e0">Machine Learning Specialization - Standford and DeepLearning.AI (Coursera).</a>
                 </li>
                 <li>
                   <a target="_blank" href="https://www.freecodecamp.org/certification/NguyenQuangTung/foundational-c-sharp-with-microsoft">Foundational C# with Microsoft - freeCodeCamp.</a>
