update demo link

--- a/index.html
+++ b/index.html
@@ -367,7 +367,11 @@
               <div class="h6 mb-1">
                 Source code: &emsp;
                 <a target="_blank"
-                  href="https://github.com/nguyenquangtung/DL_Driver-drowsiness-detection.git"><span>Link</span>
+                  href="https://github.com/nguyenquangtung/DL_Driver-drowsiness-detection.git"><span>Link</span> 
+                </a>
+                &emsp;|&emsp;
+                <a target="_blank"
+                href="https://youtu.be/X8ZFH_fZsIo"><span>Demo</span>
                 </a>
               </div>
               <p>
@@ -413,6 +417,10 @@
                 <a target="_blank"
                   href="https://github.com/nguyenquangtung/ML-Chatbox.git"><span>Link</span>
                 </a>
+                &emsp;|&emsp;
+                <a target="_blank"
+                href="https://youtu.be/MSysQp4dc1I"><span>Demo</span>
+                </a>
               </div>
               <p>Build a simple Chatbot using Keras Sequential Model and deploy the model.</p>
               <p>
@@ -445,6 +453,10 @@
                 <a target="_blank"
                   href="https://github.com/nguyenquangtung/AI-Nqueens-and-8Puzzles.git"><span>Link</span>
                 </a>
+                &emsp;|&emsp;
+                <a target="_blank"
+                href="https://youtu.be/4ZaxbMdLu2c"><span>Demo</span>
+                </a>
               </div>
               <p>Apply AI algorithms to automatically play 8 puzzle and N Queen games.</p>
               <p>
@@ -469,6 +481,11 @@
                 <a target="_blank"
                   href="https://github.com/nguyenquangtung/UI-Web-The-Band.git"><span>Link</span>
                 </a>
+              </a>
+              &emsp;|&emsp;
+              <a target="_blank"
+              href="https://ui-web-the-band.vercel.app/"><span>Demo</span>
+              </a>
               </div>
               <p>The Band's static website.</p>
               <p>
@@ -493,6 +510,11 @@
                 Source code: &emsp;
                 <a target="_blank"
                   href="https://github.com/nguyenquangtung/DIP-Human-Skeleton-Estimating.git"><span>Link</span>
+                </a>
+                </a>
+                &emsp;|&emsp;
+                <a target="_blank"
+                href="https://youtu.be/DQVGjCHT1J4"><span>Demo</span>
                 </a>
               </div>
               <p>
