--- a/index_vnm.html
+++ b/index_vnm.html
@@ -396,6 +396,10 @@ e logo" title="Python" height="25" /></span>
                 <a target="_blank"
                   href="https://github.com/nguyenquangtung/DL_Driver-drowsiness-detection.git"><span>Link</span>
                 </a>
+                &emsp;|&emsp;
+                <a target="_blank"
+                href="https://youtu.be/X8ZFH_fZsIo"><span>Demo</span>
+                </a>
               </div>
               <p>
             Đào tạo một mô hình CNN trên một bộ dữ liệu chứa các ví dụ về cả mắt nhắm và mắt mở. 
@@ -440,6 +444,11 @@ e logo" title="Python" height="25" /></span>
                 <a target="_blank"
                   href="https://github.com/nguyenquangtung/ML-Chatbox.git"><span>Link</span>
                 </a>
+              </a>
+              &emsp;|&emsp;
+              <a target="_blank"
+              href="https://youtu.be/MSysQp4dc1I"><span>Demo</span>
+              </a>
               </div>
               <p>Xây dựng Chatbot đơn giản sử dụng Keras Sequential Model và triển khai mô hình.</p>
               <p>
@@ -472,6 +481,10 @@ e logo" title="Python" height="25" /></span>
                 <a target="_blank"
                   href="https://github.com/nguyenquangtung/AI-Nqueens-and-8Puzzles.git"><span>Link</span>
                 </a>
+                &emsp;|&emsp;
+                <a target="_blank"
+                href="https://youtu.be/4ZaxbMdLu2c"><span>Demo</span>
+                </a>
               </div>
               <p>Áp dụng các thuật toán AI để tự động chơi game 8 puzzle và N Queen.</p>
               <p>
@@ -495,6 +508,10 @@ e logo" title="Python" height="25" /></span>
                 Source code: &emsp;
                 <a target="_blank"
                   href="https://github.com/nguyenquangtung/UI-Web-The-Band.git"><span>Link</span>
+                </a>
+                &emsp;|&emsp;
+                <a target="_blank"
+                href="https://ui-web-the-band.vercel.app/"><span>Demo</span>
                 </a>
               </div>
               <p>Website tĩnh của nhóm nhạc The Band.</p>
@@ -520,6 +537,10 @@ e logo" title="Python" height="25" /></span>
                 Source code: &emsp;
                 <a target="_blank"
                   href="https://github.com/nguyenquangtung/DIP-Human-Skeleton-Estimating.git"><span>Link</span>
+                </a>
+                &emsp;|&emsp;
+                <a target="_blank"
+                href="https://youtu.be/DQVGjCHT1J4"><span>Demo</span>
                 </a>
               </div>
               <p>
